syntax = "proto3";

package test_runner;
option go_package = "test_case_runner";

message testCasesRequest {
  string accountHash = 1;
  string testCasesPath = 2;
}

message transactionError {
  string code = 1;
  string description = 2;
  string transactionText = 3;
}

message testCaseRunReport {
  int64 passedCount = 1;
  int64 failedCount = 2;
  repeated transactionError errors = 3;
}

message applicationError {
  string code = 1;
  string description = 2;
}

message testsReport {
  testCaseRunReport report = 1;
  applicationError applicationError = 2;
}

service testRunnerService {
  rpc Run(testCasesRequest) returns (testsReport) {};
}
